# MiniGames

./: .gitignore  CMakeLists.txt
inc/SOIL2/: CMakeLists.txt
res/shaders/: camera_fragment.glsl  combinedLight_fragment.glsl  directional_fragment.glsl  lighting_fragment.glsl  lighting_maps_fragment.glsl  materials_fragment.glsl  projection_core.glsl  spotLight_fragment.glsl  texture_core.glsl  texture_fragment.glsl  transform_core.glsl  transform_fragment.glsl  triangle2_fragment.glsl  triangle2_vertex.glsl
src/: shaders.cpp  triangle.cpp
src/Camera/: CMakeLists.txt  camera.cpp
src/CombinedLight/: CMakeLists.txt  combinedLight.cpp
src/Directional/: CMakeLists.txt  directional.cpp
src/Lighting/: CMakeLists.txt  lighting.cpp
src/LightingMaps/: CMakeLists.txt  lightingMaps.cpp
src/LoadingModel/: CMakeLists.txt  loadingModel.cpp
src/Materials/: CMakeLists.txt  materials.cpp
src/PointLight/: CMakeLists.txt  pointLight.cpp
src/Projection/: CMakeLists.txt  projection.cpp
src/Shaders/: CMakeLists.txt
src/SpotLight/: CMakeLists.txt  spotLight.cpp
src/Textures/: CMakeLists.txt  textures.cpp
src/Transform/: CMakeLists.txt  transform.cpp
src/Transformation/: CMakeLists.txt  transformation.cpp
src/Triangle/: CMakeLists.txt  triangle.cpp
src/Triangle2/: CMakeLists.txt  triangle2.cpp
src/inc/: Camera.h  Mesh.h  Model.h  Shader.h  ShaderLoader.h  Textures.h  Vertex.h
